name:                fusebox
version:             0.0.0.1
synopsis:            FUSE support library and implementations
description:         Please see README.md
homepage:            https://github.com/RobertFischer/fusebox#README.md
license:             BSD3
license-file:        LICENSE
author:              Robert Fischer
maintainer:          smokejumperit+stack@gmail.com
copyright:           BSD3
category:            software
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      shared
  default-language:    Haskell2010
  ghc-options:         -O3 -Wall -Werror
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5,
                       either >= 4.4.1.1 && < 4.5,
                       mtl >= 2.2.1 && < 2.3,
                       HFuse,
                       text >= 1.2.2.1 && < 1.3,
                       filepath >= 1.4.1.0 && < 1.5,
                       hashable >= 1.2.4.0 && < 1.3,
                       bytestring >= 0.10.8.1 && < 0.11
  exposed-modules:     System.Fuse.Box

executable MemoryFS
  hs-source-dirs:      MemoryFS
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T -O3 -Wall -Werror
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5,
                       unordered-containers >= 0.2.7.1 && < 0.3,
                       stm >= 2.4.4.1 && < 2.5
